# canforge-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  __init__.py  generate.py  run.py  worker.py
benchmarks/fixtures/: benchmark.dbc
benchmarks/results/: v0.2.0.json  v0.2.0.md
canforge_mcp/: __init__.py  errors.py  server.py  tools.py
docs/: releasing.md  tools.md
tests/: conftest.py  test_benchmarks.py  test_dbc_tools.py  test_log_tools.py  test_server.py
tests/fixtures/: README.md  invalid.dbc  sample.dbc  sample_changed.dbc
